# native-library-bundle

./: .README.md.swp  .build.yml  .gitignore  .jenkins.groovy  .travis.yml  CMakeLists.txt  Maemo5  README.md  appveyor.yml  azure-pipelines.yml  cb  deploy-script.ps1  deploy-script.sh  pre-build-script.sh
.github/cmake/: beaglebone.black.preload.cmake
.github/cmake/select/: android.x86.v24.sh  beaglebone.black$(shell).sh  emscripten.wasm.sh  fedora.amd64$(shell).sh  gamecube.sh  maemo.armel$(shell).sh  mingw.w64.sh  raspberry.armhf.sh  steam.amd64.sh  ubuntu.amd64.tools.sh
.github/workflows/: 10-compile.yml
Android/include/SDL2/: SDL_config_android.h
Android/libraries/x86/ssl/include/: openssl
Android/libraries/x86_64/ssl/include/: include
Apple/include/: enum_string_mapping.inc  extension_enum.inc
Apple/include/SDL2/: SDL_config.h  SDL_revision.h
Apple/include/openssl/: opensslconf.h
Apple/include/spirv-tools/: optimizer.hpp
Apple/lib/osx-universal/: libSDL2.la  libSDL2_test.la  libSDL2main.la  libSPIRV-Tools-shared.dylib
Emscripten/include/SDL2/: SDL_config.h  SDL_revision.h
Maemo 5/include/SDL2/: SDL_config.h
Maemo 5/lib/: libSDL2-2.0.so.0.4.0
NaCL/include/SDL2/: SDL_config.h
NaCL/lib/: libSDL2.la
NaCL/lib/cmake/SDL2/: sdl2-config.cmake
NaCL/lib/pkgconfig/: sdl2.pc
NaCL/src/: SDL_nacl_main.c
RaspberryPi/include/: assimp  bullet
SteamOS/include/libavutil/: ffversion.h
Tools/osx.x86_64/lib/: libPressurizeModels.dylib  libPressurizeTextures.dylib
Ubuntu/amd64/: libavformat.so.57.20.100
Ubuntu/arm-linux-gnueabihf/: libopenal.so.1.17.2
Ubuntu/include/: assimp  bullet  glbinding  libavcodec  libavdevice  libavfilter  libavformat  libavutil  libswresample  libswscale  operand.kinds-unified1.inc
Ubuntu/lib/aarch64-linux-gnu/: libopenal.so.1.17.2
Ubuntu/lib/x86_64-linux-gnu/: libassimp.so.3  libassimp.so.3.2.0  libavdevice.so.57.0.100  libavfilter.so.6.21.100  libavformat.so.57.20.100  libavutil.so.55.10.100  libswresample.so.2.0.101  libswscale.so.4.0.100
Ubuntu/util/: AppImageAssistant
Ubuntu/util/x86_64-linux-gnu/: runtime
Ubuntu/x86_64-linux-gnu/: libassimp.so.3  libassimp.so.3.2.0  libavdevice.so.57.0.100  libavutil.so.55.10.100  libswresample.so.2.0.101  libswscale.so.4.0.100
Win/64/link/: avdevice.lib  swscale.lib
Win32/: InstallDependencies.bat
Win32/64/link/: BulletDynamics.lib  BulletWorldImporter.lib  BussIK.lib  HACD.lib  assimp-vc130-mt.exp  avfilter.lib  postproc.lib  swresample.lib
Win32/lib/amd64/: Bullet2FileLoader.lib  Bullet3Collision.lib  Bullet3Common.lib  Bullet3Dynamics.lib  Bullet3Geometry.lib  Bullet3OpenCL_clew.lib  BulletCollision.lib  BulletFileLoader.lib  BulletInverseDynamics.lib  BulletInverseDynamicsUtils.lib  BulletSoftBody.lib  ConvexDecomposition.lib  LinearMath.lib  assimp-vc130-mt.lib  avcodec.lib  vhacd.lib
WinUWP/64/link/: avformat.lib  avutil.lib
WinUWP/arm/Release/: SDL2.exp
WinUWP/include/libavutil/: ffversion.h
WinUWP/lib/amd64/Debug/: SDL2.exp
WinUWP/lib/arm/Debug/: SDL2.exp  SDL2.lib
WinUWP/lib/arm/Release/: SDL2.exp  SDL2.lib
WinUWP/lib/x86/Debug/: SDL2.lib
WinUWP/lib/x86/Release/: SDL2.ipdb  SDL2.lib
WinUWP/x64/Debug/: SDL2.lib
WinUWP/x64/Release/: SDL2.exp  SDL2.lib
WinUWP/x86/Debug/: SDL2.exp
WinUWP/x86/Release/: SDL2.exp
patches/: android-openssl.patch  assimp-zlib-find.patch  bullet-cmake.patch  compressonator-linux-mac.patch  compressonator.patch  discord-cmake.patch  ios-openssl.patch  lz4-cmake.patch  openssl-android.patch  openssl-ios.patch  sdl-osx-frameworks.patch  shaderc-cmake.patch  spirvcross-werror.patch  squish-cmake.patch  squish-pic.patch  zlib-export.patch  zstd-export.patch
src/: main.cpp
toolchain/: git-gen-release.sh
toolchain/ci/: appveyor-build.ps1  appveyor-deploy.ps1
toolchain/cmake/Toolchains/: linux-beagle-armv7hf_linux.toolchain.cmake  linux-raspberry-armhf_linux.toolchain.cmake
toolchain/makers/: Makefile.linux  Makefile.windows-base.ps1  build-targets-linux.yml  build-targets-windows.yml  coffee-config.yml  toolchain-config.yml
toolchain/python/ci/: actions.py  pipelines.py
